<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:lineSpacingExtra="6dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_input"
        android:hint="@string/email"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/hint_color"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_input"
        android:hint="@string/username"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/hint_color"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_input"
        android:hint="@string/password"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/hint_color"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/bg_btn"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="0.497"/>

</androidx.constraintlayout.widget.ConstraintLayout>