<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.landingPage.LandingPage3Fragment">

    <ImageView
        android:id="@+id/imageLandingPage3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/textlp3"
        android:textAlignment="center"
        android:textColor="@color/gradient_start_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLandingPage3"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
        android:drawableTint="@color/gradient_start_color"
        android:text="@string/next"
        android:textSize="18sp"
        android:textColor="@color/gradient_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="m" />

</androidx.constraintlayout.widget.ConstraintLayout>