<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:civ_border_width="5dp"
        app:civ_border_color="@color/gradient_start_color"
        android:src="@android:mipmap/sym_def_app_icon"/>

    <ImageButton
        android:id="@+id/btn_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24"
        android:contentDescription="@string/image" />

    <EditText
        android:id="@+id/et_email_profile"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@android:color/black"
        android:background="@drawable/bg_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/et_username_profile"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColor="@android:color/black"
        android:background="@drawable/bg_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_profile"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username_profile"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_simpan"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/update_user"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Username" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Email" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>